Fixed fold markers not showing when readable line length turned off.

--- a/obsidian.css
+++ b/obsidian.css
@@ -314,7 +314,7 @@ img
 .cm-s-obsidian,
 .markdown-preview-view
 {
-    padding-left: 10px !important;
+    /* padding-left: 10px !important; */
     padding-right: 10px !important;
 }
 
